# haoce

./: .gitignore  LICENSE  README.md  config.example.ini  main.py  pyproject.toml  requirements.txt
api/: base.py  llm.py  tts.py
docs/superpowers/plans/: 2026-06-12-opensource-plan.md
docs/superpowers/specs/: 2026-06-12-opensource-design.md
