[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "haoce"
version = "1.0.0"
description = "好策(HaoCe)阅读平台自动阅读脚本 — 模拟阅读、讨论、摘抄、报告、朗读全自动"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "requests>=2.25",
    "qwen-tts>=0.1",
    "soundfile>=0.12",
    "torch>=2.7",
    "torchaudio>=2.7",
]

[project.optional-dependencies]
llm = ["ollama"]  # 如果通过 Ollama 用本地 LLM

[project.scripts]
haoce = "main:main"

[tool.setuptools.packages.find]
include = ["api*"]
